--- a/src/components/maker/maker.module.css
+++ b/src/components/maker/maker.module.css
@@ -1,20 +1,17 @@
 @value mediaQuery from '../../common/size.css';
+@value makerWhite from '../../common/colors.css';
 
 .maker {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
+  background-color: makerWhite;
 }
 
 .container {
   display: flex;
   flex: 1;
-}
-
-.title {
-  width: 100%;
-  text-align: center;
 }
 
 @media screen and (max-width: mediaQuery) {
